[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steadycron"
version = "0.1.2"
description = "Code-monitoring SDK for SteadyCron — wrap scheduled jobs with @steadycron.job to send start/success/fail pings, and get alerted on missed or stuck runs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []  # no runtime dependencies — stdlib only
keywords = ["cron", "monitoring", "heartbeat", "scheduler", "dead-mans-switch", "cronjob"]
authors = [
  { name = "SteadyCron" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://steadycron.com"
Documentation = "https://steadycron.com/docs"
Repository = "https://github.com/steadycron/steadycron-python"
"Bug Tracker" = "https://github.com/steadycron/steadycron-python/issues"
Changelog = "https://github.com/steadycron/steadycron-python/releases"

[tool.hatch.build.targets.wheel]
packages = ["steadycron"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
